# livedesk-live-wallpaper-for-gnome

./: .gitignore  CHANGE.md  README.md  SETUP.md  config.example.json  install.sh  livedesk-daemon.service
.github/: FUNDING.yml
.github/workflows/: release.yml
app/: livedesk-tray.js  livedesk.js
daemon/: Cargo.toml
daemon/src/: dbus_iface.rs  frame.rs  main.rs  pipeline.rs
data/: me.tamkungz.Livedesk.desktop
data/schemas/: me.tamkungz.Livedesk.gschema.xml
debian/: cargo-config  changelog  control  copyright  postinst  rules
native/: README.md
native/gnome-shell/: README.md  gnome-shell-43-background.patch  livedeskBackground.js
native/mutter/: README.md
scripts/: build-extension-zip.sh  livedesk-setup.sh  livedesk-uninstall.sh  package-launchpad-source.sh  package-linux.sh
shell-extension/: extension.js  metadata.json  prefs.js  stylesheet.css
shell-extension-legacy/: extension.js  metadata.json  prefs.js  stylesheet.css
shell-extension-legacy/schemas/: me.tamkungz.Livedesk.gschema.xml
shell-extension/schemas/: me.tamkungz.Livedesk.gschema.xml
